BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_CaseTemplate__c.object
<CustomObject>
    <fields>
        <fullName>HSvc_Recommended_Next_Step__c</fullName>
        <label>Recommended Next Steps</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Hsvc_Support_Tier__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Escalate to DM</fullName>
                </value>
                <value>
                    <fullName>Escalate to NAP</fullName>
                </value>
                <value>
                    <fullName>Expedited TR</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>forwarded for approval</fullName>
                </value>
                <value>
                    <fullName>forwarded for processing</fullName>
                </value>
                <value>
                    <fullName>Hughes Truck Roll</fullName>
                </value>
                <value>
                    <fullName>Inform customer</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>NAP Office Only</fullName>
                </value>
                <value>
                    <fullName>NAP Truck Roll</fullName>
                </value>
                <value>
                    <fullName>None Required</fullName>
                </value>
                <value>
                    <fullName>Partner RMA</fullName>
                </value>
                <value>
                    <fullName>PIP</fullName>
                </value>
                <value>
                    <fullName>Priority TR</fullName>
                </value>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>PSR</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Resolve</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Set up Account</fullName>
                </value>
                <value>
                    <fullName>Vendor Meet</fullName>
                </value>
                <value>
                    <fullName>Waiting customer return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Recommended_Next_Steps__c</fullName>
        <label>Recommended Next Steps Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_SuspectedAsset__c</fullName>
        <label>Product Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Case_Record_type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Tools</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Satellite Broadband</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
   <fields>
        <fullName>Hsvc_Case_Subtype__c</fullName>
        <label>Case Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Case_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Cancel Core Service (Terminate)</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Compliance with Regulator</fullName>
                </value>
                <value>
                    <fullName>De-Install (System)</fullName>
                </value>
                <value>
                    <fullName>Email Issue</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Equipment Recovery</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General information</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>Internet Performance</fullName>
                </value>
                <value>
                    <fullName>New Installation</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>Outage</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Outbound Program</fullName>
                </value>
                <value>
                    <fullName>Partial Outage</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Regular Process</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Relocation - Deinstall</fullName>
                </value>
                <value>
                    <fullName>Relocation - Reinstall</fullName>
                </value>
                <value>
                    <fullName>Repair Truckroll</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_First_Call_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether First Call Resolution for the case was done or not.</description>
        <label>First Call Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_Language__c</fullName>
        <description>Languages which are supported in SAD</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Hsvc_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_Problem_Category__c</fullName>
        <description>Created in Release R 1.4 of SA</description>
        <label>Problem Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint/Claim</fullName>
                </value>
                <value>
                    <fullName>Inquiry/Request</fullName>
                </value>
                <value>
                    <fullName>Petition/Claim</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Requests/Inquiries</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Petition</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                    <isActive>false</isActive>
                    <label>Appeal</label>
                </value>
                <value>
                    <fullName>Claim</fullName>
                    <isActive>false</isActive>
                    <label>Claim</label>
                </value>
                <value>
                    <fullName>Compliant</fullName>
                    <isActive>false</isActive>
                    <label>Compliant</label>
                </value>
                <value>
                    <fullName>Replenishment appeal</fullName>
                    <isActive>false</isActive>
                    <label>Replenishment appeal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hsvc_Support_Tier__c</fullName>
        <label>Support Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Consumer Tier 1</fullName>
                </value>
                <value>
                    <fullName>Enterprise Tier 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KBExitCode__c</fullName>
        <label>KB Exit Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonAvailableHours__c</fullName>
        <label>Non Available Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_in_Edit_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open in Edit Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutageCoveredHours__c</fullName>
        <label>Outage Covered Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutageHours__c</fullName>
        <label>Outage Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryContactEmail__c</fullName>
        <label>Primary Contact Email</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContactName__c</fullName>
        <label>Primary Contact Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContactPhone__c</fullName>
        <label>Primary Contact Phone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Case_Record_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonClosed__c</fullName>
        <label>Reason Closed</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecalculateFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResolutionCode__c</fullName>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>TNF – Cancelled Service</fullName>
                </value>
                <value>
                    <fullName>TNF – Customer Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServicesLost__c</fullName>
        <label>% Services Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <label>State Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;M Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMStatus__c</fullName>
        <label>T&amp;M Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Override T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Accept T&amp;M Charges</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeInCurrentStatus__c</fullName>
        <description>Read Only. Calculated based on how long the case was in a specific status</description>
        <label>Time in Current Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yahs_Severity__c</fullName>
        <description>This field captures the severity</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_ActivityTypeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of D-05262, Will be used to populate the activity type on case and on the default case activity of case</description>
        <label>Activity Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>Hsvc_ActivityType__c.HSvc_Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.HSvc_Case_Record_type__c</field>
                <operation>equals</operation>
                <valueField>Hsvc_ActivityType__c.RecordType__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hsvc_ActivityType__c</referenceTo>
        <relationshipLabel>Case Templates</relationshipLabel>
        <relationshipName>Case_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HSvc_Description__c</columns>
        <columns>HSvc_Case_Subject__c</columns>
        <columns>HSvc_Resolution__c</columns>
        <columns>ResolutionCode__c</columns>
        <columns>HSvc_Case_Record_type__c</columns>
        <columns>HSvc_Case_Type_Sub_Type__c</columns>
        <columns>HSvc_SuspectedAsset__c</columns>
        <columns>HSvc_RIA__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>ExpiryDate__c</columns>
        <columns>HSvc_Available_to_Profile__c</columns>
        <columns>HSvc_Case_Re_assign__c</columns>
        <columns>ActivityDescription__c</columns>
        <columns>Hsvc_Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Case Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HSvc_ActiveCaseTemplates</fullName>
        <columns>NAME</columns>
        <columns>HSvc_Case_Status__c</columns>
        <columns>HSvc_Case_Subject__c</columns>
        <columns>Hsvc_Case_Subtype__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HSvc_IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Case Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Malfunction_Key_FOB_Templates</fullName>
        <columns>NAME</columns>
        <columns>HSvc_Case_Re_assign__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HSvc_Customer_Request_Type__c</field>
            <operation>equals</operation>
            <value>Malfunction Key FOB</value>
        </filters>
        <label>Malfunction Key FOB Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Key_FOB_Templates</fullName>
        <columns>NAME</columns>
        <columns>HSvc_Case_Re_assign__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HSvc_Customer_Request_Type__c</field>
            <operation>equals</operation>
            <value>New Key FOB</value>
        </filters>
        <label>New Key FOB Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Replace_Key_FOB_Templates</fullName>
        <columns>NAME</columns>
        <columns>HSvc_Case_Re_assign__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HSvc_Customer_Request_Type__c</field>
            <operation>equals</operation>
            <value>Replace Key FOB</value>
        </filters>
        <label>Replace Key FOB Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Templates</pluralLabel>
    <recordTypes>
        <fullName>B2BGeneralCase</fullName>
        <active>true</active>
        <label>B2B General Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>B2CGeneralCase</fullName>
        <active>true</active>
        <label>B2C General Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>InstallWorkOrder</fullName>
        <active>true</active>
        <label>Install Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>RepairWorkOrder</fullName>
        <active>true</active>
        <label>Repair Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Yahsat_Business_Support_Case</fullName>
        <active>true</active>
        <label>Business Support Case</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <description>This validation rule ensures that the expiry date is set in future and is greater that the effective date</description>
        <errorConditionFormula>OR(ExpiryDate__c &lt; TODAY(),ExpiryDate__c &lt; EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>ExpiryDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HSvc_CreateChildCase</fullName>
        <active>true</active>
        <description>Rules to make Child Case Quick Case Create template required if Child Case checkbox is checked</description>
        <errorConditionFormula>OR(
AND(HSvc_Create_Child_Case_s__c == True &amp;&amp; ISBLANK(HSvc_ChildCaseQuickCaseCreateTempla__c)),
AND(HSvc_Create_Child_Case_s__c == False &amp;&amp; NOT(ISBLANK(HSvc_ChildCaseQuickCaseCreateTempla__c)))
)</errorConditionFormula>
        <errorDisplayField>HSvc_ChildCaseQuickCaseCreateTempla__c</errorDisplayField>
        <errorMessage>Plase select child case template</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HSvc_DisableOpeninEditMode</fullName>
        <active>true</active>
        <description>When &quot;Available to Profile&quot; is selected as &quot;System&quot; or &quot;Customer Portal Defaults&quot;, then the &quot;Open in Edit Mode&quot; check box cannot be checked</description>
        <errorConditionFormula>OR(ISPICKVAL(HSvc_Available_to_Profile__c,&apos;System&apos;),ISPICKVAL(HSvc_Available_to_Profile__c,&apos;Customer Portal Defaults&apos;)) &amp;&amp; Open_in_Edit_Mode__c == true</errorConditionFormula>
        <errorMessage>Open in Edit Mode cannot be selected, if Available to Profile is set to System or Customer Portal Defaults</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HSvc_MinutesUntilFollowUpDue</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL( HSvc_Case_Record_type__c , &apos;B2B General Case&apos;) &amp;&amp; ISPICKVAL(Hsvc_Support_Tier__c,&apos;Consumer Tier 1&apos;) &amp;&amp; NOT(ISPICKVAL( HSvc_Case_Status__c , &apos;Closed&apos;)) &amp;&amp; ISBLANK(FollowUpDueDate__c))
 || ( (ISPICKVAL( HSvc_Case_Record_type__c , &apos;B2C General Case&apos;) &amp;&amp; (( ISPICKVAL( HSvc_Case_Status__c , &apos;Open - Escalated&apos;)
 || ISPICKVAL( HSvc_Case_Status__c , &apos;Pending - Callback&apos;) || ISPICKVAL( HSvc_Case_Status__c , &apos;Pending - Customer Confirmation&apos;) 
 || ISPICKVAL( HSvc_Case_Status__c , &apos;Pending - Customer Input&apos;))) &amp;&amp; ISBLANK(FollowUpDueDate__c)))</errorConditionFormula>
        <errorDisplayField>FollowUpDueDate__c</errorDisplayField>
        <errorMessage>Field Cannot be left blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HSvc_PendingReactivationStatus</fullName>
        <active>true</active>
        <description>Is status is Pending Reactivation, user should not be able to select that template</description>
        <errorConditionFormula>ISPICKVAL( HSvc_Case_Status__c,&apos;Pending Re-Activation&apos;)  &amp;&amp; NOT( ISPICKVAL( HSvc_Available_to_Profile__c,&apos;System&apos;))</errorConditionFormula>
        <errorDisplayField>HSvc_Available_to_Profile__c</errorDisplayField>
        <errorMessage>Template with Case status &apos;Pending Re-Activation&apos; are available for System Only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HSvc_RecommentNextStepSelection</fullName>
        <active>true</active>
        <description>When &quot;Available to Profile&quot; is selected as &quot;User&quot;, then the use cannot save the template with the following Recommended Next Steps picklist values: Hughes Truck Roll, NAP Truck Roll, Vendor Meet, and NAP Office Only</description>
        <errorConditionFormula>ISPICKVAL(HSvc_Available_to_Profile__c,&apos;User&apos;) &amp;&amp;
(
ISPICKVAL(HSvc_Recommended_Next_Step__c,&apos;Hughes Truck Roll&apos;) ||
ISPICKVAL(HSvc_Recommended_Next_Step__c,&apos;NAP Truck Roll&apos;) ||
ISPICKVAL(HSvc_Recommended_Next_Step__c,&apos;Vendor Meet&apos;) ||
ISPICKVAL(HSvc_Recommended_Next_Step__c,&apos;NAP Office Only&apos;)
)</errorConditionFormula>
        <errorMessage>Recommended Next Step cannot be set to either of Hughes Truck Roll, NAP Truck Roll, NAP Office Only and Vendor Meet when template is marked available to user</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HughesSvc_CaseResolutiononCaseTemplate</fullName>
        <active>true</active>
        <description>This validation ensures that Case resolution and Case Resolution must be there while closing a case</description>
        <errorConditionFormula>AND(
			ISPICKVAL(HSvc_Case_Status__c,&apos;Closed&apos;),
			OR(
				ISBLANK(HSvc_Resolution__c),
				ISBLANK(HSVC_Resolution_Code_Rule__c)
			),
			OR(
				$RecordType.DeveloperName == $Label.Hsvc_B2BGeneralCaseRecType,
				$RecordType.DeveloperName == $Label.Hsvc_B2CGeneralCaseRecType,
				$RecordType.DeveloperName == $Label.Hsvc_InstallWorkOrdersRecType,
				$RecordType.DeveloperName == $Label.Hsvc_OfficeOnlyRecType,
				$RecordType.DeveloperName == $Label.Hsvc_RepairWorkOrderRecType,
				$RecordType.DeveloperName == $Label.Hsvc_RMARecType
			)
		)</errorConditionFormula>
        <errorMessage>Cannot close case without Resolution and Resolution Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RecommendedNextStepDesc_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK(TEXT(HSvc_Recommended_Next_Step__c) )),
OR(ISNULL( HSvc_Recommended_Next_Steps__c),
ISBLANK(HSvc_Recommended_Next_Steps__c))
)</errorConditionFormula>
        <errorDisplayField>HSvc_Recommended_Next_Steps__c</errorDisplayField>
        <errorMessage>Cannot leave this field blank if Recommended Next step is selected</errorMessage>
    </validationRules>
</CustomObject>